--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</div>
 	<div class="footer">
 		<div class="conteiner ">
-			<div class="logo"><img src="/image/Logo.svg" alt="logo"></div>
+			<div class="logo"><img src="../image/Logo.svg" alt="logo"></div>
 			<div class="color">
 				<h2>основные ссылки</h2>
 				<ul>
